Fix AC bug, Alignment in wornarmor

--- a/src/App.css
+++ b/src/App.css
@@ -209,3 +209,15 @@ img {
 .armorClass_AC {
     font-size: 20px;
 }
+
+.shield,
+.armor {
+    margin: 8px;
+    display: flex;
+    flex-flow: row;
+}
+
+.armor>div,
+.shield>div {
+    padding: 0 8px;
+}
